--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "new-portfolio",
   "private": true,
-  "version": "0.1.1",
+  "version": "0.2.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@phosphor-icons/react": "^2.1.7",
     "@tailwindcss/vite": "^4.1.6",
     "clsx": "^2.1.1",
     "motion": "^12.11.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.6",
+    "yup": "^1.6.1",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
