--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
-    "@phosphor-icons/react": "^2.1.7",
     "@tailwindcss/vite": "^4.1.6",
     "clsx": "^2.1.1",
-    "motion": "^12.11.4",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
